[package]
name = "gammalooprs"
version = "0.3.3"
edition = "2024"

description = "An implementation of the Local Unitarity method for computing differential collider cross-sections."
# license-file = "LICENSE.md"
readme = "../../README.md"
repository = "https://github.com/alphal00p/gammaloop"
license = "MIT OR Apache-2.0"
keywords = ["cross-section", "loop", "perturbative", "physics"]
categories = ["science"]
build = "build.rs"

[lib]
# required-features = ["python_api"]
bench = false

[dependencies]
ahash = { workspace = true, features = ["serde"] }
base62 = "2.0.2"
bincode = { workspace = true, features = ["serde"] }
bincode-trait-derive = { workspace = true }
brotli = "7.0.0"
clap = { workspace = true, features = [
  "derive",
  "env",
  "unicode",
  "wrap_help",
] }
clarabel = "0"
color-eyre = { version = "0.6", default-features = false }
colored = { workspace = true }
ctrlc = "3.4.4"
delegate = "0.12.0"
derive_more = "0.99.17"
dirs = { workspace = true }
dot-parser = { workspace = true }
enum_dispatch = "*"
eyre = { workspace = true }
git-version = { workspace = true }
idenso = { workspace = true, features = ["bincode"] }
include_dir = { workspace = true }
indicatif = { workspace = true, features = ["improved_unicode", "rayon"] }
libc = "0.2.0"

itertools = { workspace = true }
linnet = { workspace = true, features = [
  "bincode",
  # "drawing",
  "serde",
  "symbolica",
] }
# cgmath = "0.18.0"
# argmin = "0.10.0"
# by_address = "1.2.1"
# pyo3-pylogger = { version = "0.3.0", optional = true }
# humantime = "2.1.0"
linreg = "0.2.0"
# vakint = { git = "https://github.com/alphal00p/vakint", rev = "a32723f7c56ce73dd6a35713880e3a924e72c51b" } # "e44c210ded3936048615d39872022a0b6ef18454"
momtrop = { version = "0.3.0" }
# log = { version = "*", features = ["release_max_level_debug"] }
# env_logger = "*"
# pyo3-log = { version = "0.12.0", optional = true }
nalgebra = "0.34.1"
nu-ansi-term = { workspace = true }
paste = "1.0.15"
pathfinding = "4.11.0"
pyo3-stub-gen = { workspace = true, optional = true }
rand = { workspace = true, features = ["small_rng"] }
rayon = { workspace = true }
ratatui = { workspace = true, features = ["crossterm_0_28"] }
# constcat = "0.5.0"
ref-ops = "0.2.5"
ringbuffer = "0.16.0"
# gmp-mpfr-sys = { version = "1.6", features = ["use-system-libs"] }
rug = { version = "1.27.0", features = ["serde"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_repr = "0.1.19"
serde_yaml = { workspace = true }
slotmap = { version = "1.0.7", features = ["serde"] }
smallvec = { version = "1.7", features = ["const_generics", "serde"] }
smartstring = { workspace = true, features = ["serde"] }
spenso = { workspace = true, features = ["shadowing"] }
spenso-hep-lib = { workspace = true }
spenso-macros = { workspace = true }
statrs = "0.16.0"
symbolica = { workspace = true, features = [
  "bincode",
  "serde",
] }
# compensated-summation = "0.3.0"
# serde_with = "3.9.0"
tabled = { workspace = true, features = ["ansi"] }
# gxhash = "3.4.1"
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true, features = ["release_max_level_info"] }
tracing-appender = { workspace = true }
tracing-indicatif = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "fmt",
  "json",
  "time",
] }
twofloat = "0.8.4"
typed-index-collections = { workspace = true, features = [
  "bincode",
  "serde",
  "serde-alloc",
] }
vakint = { workspace = true }
varpro = "0.14.0"
vectorize = "0.2.0"

[dependencies.pyo3]
workspace = true
features = ["auto-initialize", "eyre"]
optional = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = { workspace = true, features = ["json", "ron", "serde", "toml"] }
# oneloop_bridge = { git = "https://github.com/SecretGmG/OneLOopBridge", version = "0.2.0" }

[build-dependencies]
# pyo3-build-config = "*"
vergen-gitcl = { workspace = true }
# pyo3-build-config = "*"

[features]
default = []
fail-on-warnings = []
fjcore = []
higher_loops = []
pyo3-extension-module = ["pyo3/extension-module"]
python_abi = ["pyo3/abi3", "pyo3/abi3-py37", "python_api"]
python_api = ["pyo3"]
# insta.opt-level = 3
python_stubgen = ["pyo3-stub-gen", "python_api"]

# use-system-gmp = ["rug/gmp-mpfr-sys/use-system-libs"]
