[package]
name = "idenso"
version = "0.3.0"
edition = "2024"
description = "Tensor identities for symbolica"

[dependencies]

eyre = { workspace=true }
bincode = { workspace = true ,optional =true}
bincode-trait-derive = { workspace = true ,optional =true }
symbolica = { workspace = true }
spenso = { workspace = true,features=["shadowing"] }
spenso-macros =  { workspace = true }
itertools =  { workspace = true }
linnet =  { workspace = true }

tracing = {workspace = true}
thiserror =  { workspace = true }
pyo3 =  { workspace = true ,optional =true }
pyo3-stub-gen = { workspace = true ,optional =true }
nu-ansi-term = { workspace = true }

[dev-dependencies]
insta = { version = "1.38.0", features = ["yaml", "json", "ron", "toml"] }

[features]

default = []
bincode = ["dep:bincode", "dep:bincode-trait-derive"]
python = ["dep:pyo3"]
python_stubgen = ["symbolica/python_stubgen", "python", "dep:pyo3-stub-gen"]
