[package]
name = "idenso"
version = "0.3.0"
edition = "2024"
description = "Tensor identities for symbolica"

[dependencies]
bincode = { workspace = true, optional = true }
bincode-trait-derive = { workspace = true, optional = true }
eyre = { workspace = true }
itertools = { workspace = true }
linnet = { workspace = true }
spenso = { workspace = true, features = ["shadowing"] }
spenso-macros = { workspace = true }
symbolica = { workspace = true }

nu-ansi-term = { workspace = true }
pyo3 = { workspace = true, optional = true }
pyo3-stub-gen = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }

base64 = "0.22.1"
blake3 = "1.8.3"
delegate = "0.13.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
gungraun = "0.18.1"
insta = { workspace = true, features = ["json", "ron", "toml", "yaml"] }

[[bench]]
name = "schoonschip_modes"
harness = false

[[bench]]
name = "schoonschip_modes_time"
harness = false

[features]
default = []
bincode = ["dep:bincode", "dep:bincode-trait-derive"]
python = ["dep:pyo3"]
python_stubgen = ["dep:pyo3-stub-gen", "python", "symbolica/python_stubgen"]
