[package]
name = "kurvst"
version = "0.1.0"
edition.workspace = true
description = "Kurbo-backed Bezier and path pattern helpers for Typst"
repository = "https://github.com/alphal00p/gammaloop"
license = "MIT"
publish = false

[lib]
name = "kurvst"
crate-type = ["cdylib", "rlib"]

[dependencies]
ciborium = "0.2.2"
kurbo = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
wasm-minimal-protocol = "0.2.0"
