[package]
name = "linnest"
version = "0.1.0"
edition = "2021"
description = "A library for working with linnet data structures in WebAssembly environments"
repository = "https://github.com/lcnbr/linnet"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ciborium = "0.2.2"
linnet = { workspace = true, features = ["drawing", "rkyv", "serde"] }
rkyv = "0.7"
serde = { version = "1.0", features = ["derive"] }

cgmath = { version = "0.18.0", features = ["serde"] }
figment = "0.10.19"
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
rand = "0.8.5"
thiserror = "2.0.16"
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol" }

[features]
custom = []
