[package]
name = "linnet-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for linnet"
license = "MIT"

[package.metadata.maturin]
name = "linnet_py"

[lib]
crate-type = ["cdylib", "rlib"]
name = "linnet_py"

[dependencies]
dot-parser = { workspace = true }
linnet = { workspace = true }
pyo3 = { workspace = true }
pyo3-stub-gen = { workspace = true, default-features = false }

[build-dependencies]
pyo3-build-config = { version = "0.25" }

[features]
default = ["extension-module"]
abi3-py310 = ["pyo3/abi3-py310"]
extension-module = ["pyo3/extension-module"]
