[package]
name = "linnet"
version = "0.17.0"
edition = "2021"
description = "A library for working with half-edge data structures, and subgraphs, and drawing them"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "linnet"
path = "src/lib.rs"

[dependencies]
ahash = { version = "0.8.11", default-features = false, features = ["compile-time-rng", "std"] }
bincode = { workspace = true, features = ["serde"], optional = true }
bincode-trait-derive = { workspace = true }
bitvec = { version = "1.0.1" }
cgmath = { version = "0.18.0", optional = true }
# derive_more = "0.99.17"
# hibit_tree = "0.1.0-alpha.3"
dot-parser = "0.5"
duplicate = "2.0.0"
figment = { version = "0.10.19" }
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
indenter = { version = "0.3.3", features = ["std"] }
indexmap = { workspace = true }
itertools = "0.14.0"
paste = "1.0.15"
rand = { version = "0.8.5", features = ["small_rng"] }
rkyv = { version = "0.7", features = ["bitvec"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_repr = { workspace = true }
symbolica = { workspace = true, default-features = false, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.5"
figment = "0.10.19"
# vers-vecs = { version = "1.6.1", features = ["simd"] }
# vob = "3.0.3"
# smallbitvec = "2.6.0"
# bit-vec = "0.8.0"
# roaring = { version = "0.10.10" }
# hi_sparse_bitset = { version = "0.6.1", features = ["simd"] }
# hibitset = "0.6.4"
# fixedbitset = "0.5.7"
iai-callgrind = "0.14.0"
insta = { workspace = true, features = ["ron"] }
kurbo = "0.11.1"
linnest = { workspace = true }
proptest = "1.6.0"
serde = "1.0"
similar-asserts = "1.7.0"

[features]
default = ["nodestore-vec", "serde"]
bincode = ["dep:bincode", "serde"]
drawing = ["dep:cgmath"]
energy_trace = []
nodestore-forest-child-vec = []
nodestore-forest-parent-child = []
nodestore-vec = []
rkyv = ["dep:rkyv"]
serde = ["bitvec/serde", "dep:serde"]
symbolica = ["dep:symbolica"]
# layout = ["dep:argmin"]
