[package]
name = "spenso-hep-lib"
version = "0.1.7"
edition = "2024"
description = "A spenso tensor library for high energy physics"

[dependencies]

spenso = { workspace = true, features = ["shadowing"] }
symbolica = { workspace = true, default-features = false }
spenso-macros = { workspace = true }
idenso = {workspace = true}


ahash = { version = "0.8.11", features = ["serde"] }
xpct = "0.5.1"

[dev-dependencies]

insta = { workspace = true, features = ["yaml", "json", "ron", "toml"] }
