[package]
name = "spenso-hep-lib"
version = "0.1.7"
edition = "2024"
description = "A spenso tensor library for high energy physics"

[dependencies]
idenso = { workspace = true }
spenso = { workspace = true, features = ["shadowing"] }
spenso-macros = { workspace = true }
symbolica = { workspace = true }

ahash = { version = "0.8.11", features = ["serde"] }
xpct = "0.5.1"

[dev-dependencies]
insta = { workspace = true, features = ["json", "ron", "toml", "yaml"] }
