[package]
name = "spenso-macros"
version = "0.3.2"
edition.workspace = true
description = "Procedural macros for the spenso tensor library"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
serde = { workspace = true }
symbolica = { workspace = true, default-features = false, optional = true }
syn = { version = "2.0", features = ["extra-traits", "full"] }

[dev-dependencies]
linnet = { workspace = true }
spenso = { workspace = true }

[features]
shadowing = ["dep:symbolica"]
