[package]
name = "spynso3"
version = "0.1.2"
edition = "2024"
description = "Pyo3 bindings for spenso"

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
idenso = { workspace = true }
spenso = { workspace = true, features = ["python", "shadowing"] }
spenso-hep-lib = { workspace = true }
spenso-macros = { workspace = true }
symbolica = { workspace = true, default-features = false, features = [
  "python_export",
] }
xpct = "0.5.1"

eyre = { workspace = true }
pyo3 = { workspace = true, features = ["eyre"] }

itertools = "0.14.0"
pyo3-stub-gen = { workspace = true, default-features = false, optional = true }
pyo3-stub-gen-derive = { workspace = true }
thiserror = { workspace = true }

[features]
python_stubgen = [
  "dep:pyo3-stub-gen",
  "spenso/python_stubgen",
  "symbolica/python_stubgen",
]

# [patch.crates-io]
# pyo3-stub-gen = { git = "https://github.com/benruijl/pyo3-stub-gen", branch = "patched" }
