[package]
name = "three-dimensional-reps"
version = "0.1.0"
edition = "2024"

description = "Generation of generalized LTD/CFF three-dimensional loop-energy representations."
license = "MIT OR Apache-2.0"

[lib]
name = "three_dimensional_reps"
bench = false

[dependencies]
bincode = { workspace = true, features = ["serde"] }
bincode-trait-derive = { workspace = true }
itertools = { workspace = true }
linnet = { workspace = true, features = ["bincode", "serde", "symbolica"] }
nu-ansi-term = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
symbolica = { workspace = true, features = ["bincode", "serde"] }
tabled = { workspace = true, features = ["ansi"], optional = true }
thiserror = { workspace = true }
typed-index-collections = { workspace = true, features = [
  "bincode",
  "serde",
  "serde-alloc",
] }

[dev-dependencies]
insta = { workspace = true, features = ["json", "ron", "serde", "toml"] }

[features]
default = ["serde"]
serde = []
display = ["dep:tabled", "dep:nu-ansi-term"]
diagnostics = []
eval = ["dep:serde_json"]
symbolica-eval = ["eval"]
compiled-eval = ["symbolica-eval"]
old_cff = []
test-support = []
